[package]
name = "quote-front-end"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
